tests/output_terminal/test_not_in_insert_mode.txt
    int y;
    ^
syntax error, unexpected INT on line 4 (column 5)

Process finished with exit code 0